--- a/busstops/templates/liverydatabase.html
+++ b/busstops/templates/liverydatabase.html
@@ -50,6 +50,11 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        .separator {
+        letter-spacing: 0.1em;
+        font-weight: 600;
+        font-style: italic; 
+        }
     </style>
 </head>
 <body class="p-4 sm:p-6 md:p-8 flex flex-col min-h-screen">
@@ -88,14 +93,26 @@
     <footer class="mt-16 pt-8 border-t border-gray-200">
         <div class="max-w-4xl mx-auto text-center">
             <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                <p class="text-sm text-gray-500">&copy; 2025 TransportThing All Rights Reserved.</p>
+            <p class="text-sm text-gray-500">&copy; 2025 TransportThing <i class="separator text-gray-400 italic px-2">|</i> <u>All Rights Reserved</u></p>
                 <div class="text-sm text-gray-500 flex items-center space-x-4">
                     <span class="font-semibold">Credits:</span>
                     <a href="https://transportthing.uk/api/liveries" target="_blank" rel="noopener noreferrer" class="hover:text-blue-600 hover:underline">TransportThing API</a>
-                    <a href="" target="_blank" rel="noopener noreferrer" class="hover:text-blue-600 hover:underline">Search Engine by <b>sphericalparadox</b></a>
-                    <a href="http://barryio.github.io/liveryviewer" class="hover:text-blue-600 hover:underline">Intergration by <b>baz.io</b></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="hover:text-blue-600 hover:underline">Search Engine by <b class="text-blue-900">sphericalparadox</b></a>
+                    <a href="http://barryio.github.io/liveryviewer" class="hover:text-blue-600 hover:underline">Integration by <b class="text-blue-400">baz.io</b></a>
                 </div>
             </div>
+        </div>
+    </footer>
+
+    <footer class="pt-4 pb-8">
+        <div class="max-w-4xl mx-auto flex justify-center items-center text-xs space-x-3">
+            <a href="/" class="text-violet-500 hover:underline">Home</a>
+            <span class="text-gray-400">&bull;</span>
+            <a href="/rules" class="text-green-600 hover:underline">Rules & FAQ</a>
+            <span class="text-gray-400">&bull;</span>
+            <a href="/discord" class="text-blue-700 hover:underline">Discord</a>
+            <span class="text-gray-400">&bull;</span>
+            <a href="/contact" class="text-pink-800 hover:underline">Contact Us</a>
         </div>
     </footer>
 
