--- a/busstops/templates/map.html
+++ b/busstops/templates/map.html
@@ -35,6 +35,9 @@
 {% load static %}
 
 {% block footer %}
+<script defer data-domain="transportthing.uk" src="https://metric.snubs.dev/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
     <script>
         INITIAL_VIEW_STATE = {
         {% if request.headers.cf_ipcountry == "IE" %}
