--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>{% block title %}{% if object %}{% firstof object.get_long_name object.get_qualified_name object %} – {% endif %}TransportThing{% endblock %}</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="theme-color" content="#afdee9" media="(prefers-color-scheme: light)">
-<meta name="theme-color" content="#164450" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#2E8A9E" media="(prefers-color-scheme: light)">
+<meta name="theme-color" content="#111111" media="(prefers-color-scheme: dark)">
 <meta name="color-scheme" content="dark light">
 <meta name="format-detection" content="telephone=no">
 {% block canonical %}
@@ -14,6 +14,17 @@
     {% endif %}
 {% endblock canonical %}
 <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","url":"https://transportthing.uk","name":"TransportThing","potentialAction":{"@type":"SearchAction","target":"https://transportthing.uk/search-query?q={q}","query-input":"required name=q"}}</script>
+<script>
+  const darkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
+  const savedStyle = localStorage.getItem('map-style');
+  
+  if (savedStyle) {
+    document.documentElement.setAttribute('savedStyle', savedStyle);
+  } else if (darkMode) {
+    document.documentElement.setAttribute('savedStyle', 'dark');
+  }
+</script>
+
 {% load static %}
 <!-- <link rel="icon" sizes="48x48" type="image/png" href="/favicon.ico"> -->
 <link rel="icon" sizes="any" type="image/svg+xml" href="https://cdn.discordapp.com/icons/1337054349267959898/bcb0fa2c5561cb082d1e8fb83f4e6566.webp?size=1024">
@@ -108,10 +119,10 @@
 
 
     	{% include "motd_partial.html" %}
-<!--<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>-->
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#33a0bb', 'W7W21AYHUU');kofiwidget2.draw();</script>
 <!-- ads code to be added soon to replace donation link. don't want to donate because you think its a scummy thing to ALLOW people to donate to a project? cool, have ads instead. -->
-<script defer data-domain="transportthing.uk" src="https://plausible.io/js/script.hash.outbound-links.js"></script>
+<script defer data-domain="transportthing.uk" src="https://metric.snubs.dev/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
 </footer>
