--- a/busstops/templates/jinja2/page.html
+++ b/busstops/templates/jinja2/page.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>{% block title %}{% if object %}{{ object.get_long_name or object.get_qualified_name or object }} – {% endif %}timesbus.org{% endblock %}</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="theme-color" content="#afdee9" media="(prefers-color-scheme: light)">
-<meta name="theme-color" content="#164450" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#2E8A9E" media="(prefers-color-scheme: light)">
+<meta name="theme-color" content="#111111" media="(prefers-color-scheme: dark)">
 <meta name="color-scheme" content="dark light">
 <meta name="format-detection" content="telephone=no">
 {% block canonical %}
@@ -20,7 +20,7 @@
 <link rel="manifest" href="{{ static('manifest.webmanifest') }}">
 <link rel="stylesheet" href="/static/dist/css/style.css">
 
-	<meta name="description" content="Track buses, check out our fleet lists of buses, trains, trams, satellites and more! ">
+	<meta name="description" content="check out our fleet lists of buses, trains, trams, satellites and more, all in one place!">
 
 <meta property="og:url" content="https://transportthing.uk">
 <meta property="og:type" content="website">
