--- a/busstops/templates/departures.html
+++ b/busstops/templates/departures.html
@@ -2,16 +2,16 @@
 <div class="aside" id="departures">
     {% if when %}
         <form autocomplete="off">
-            <input type="date" name="date" min="{{ today.isoformat }}" value="{{ when.date.isoformat }}" required>
+            <input type="date" name="date" value="{{ when.date.isoformat }}" required>
             <input type="time" name="time" value="{{ when.time|time:'H:i' }}">
             {% if has_live or when == now %}
-                <input type="submit" value="↻" aria-label="Reload" title="Reload">
+                <input type="submit" value="↻" aria-label="reload" title="reload">
             {% else %}
-                <input type="submit" value="Go">
+                <input type="submit" value="go">
             {% endif %}
         </form>
     {% else %}
-        <h2>Next departures</h2>
+        <h2>next departures</h2>
     {% endif %}
     {% for item in departures %}
         {% ifchanged item.time.date %}
@@ -21,16 +21,16 @@
                     </table>
                 {% endif %}
                 {% if item.time and item.time.date != today %}
-                    <h3>{{ item.time|date:"l j F" }}</h3>
+                    <h3>{{ item.time|date:"l j f" }}</h3>
                 {% endif %}
                 <table>
                 <tbody>
                     {% if has_live or has_scheduled %}
                         <tr>
                             <td></td>
-                            <th scope="col">To</th>
-                            {% if has_scheduled %}<th scope="col">Sched&shy;uled</th>{% endif %}
-                            {% if has_live %}<th scope="col">Ex&shy;pected</th>{% endif %}
+                            <th scope="col">to</th>
+                            {% if has_scheduled %}<th scope="col">sched{% if has_live %}&shy;{% endif %}uled</th>{% endif %}
+                            {% if has_live %}<th scope="col">ex{% if has_scheduled %}&shy;{% endif %}pected</th>{% endif %}
                             {% if indicator_prefix %}
                                 <th scope="col">{{ indicator_prefix }}</th>
                             {% endif %}
@@ -50,9 +50,9 @@
             </td>
             {% if has_scheduled %}
                 <td>{% if item.link %}<a href="{{ item.link }}">{% endif %}
-                    {% if item.cancelled %}<del>{% endif %}
+                    {% if item.cancelled %}<s>{% endif %}
                         {{ item.time|time:"H:i" }}
-                    {% if item.cancelled %}</del>{% endif %}
+                    {% if item.cancelled %}</s>{% endif %}
                     {% if item.link %}</a>{% endif %}
                 </td>
             {% endif %}
@@ -75,10 +75,10 @@
 
     {% if when %}
         {% if next_page %}
-            <p class="next"><a href="{% querystring date=next_page.date time=next_page.time %}">{% if when.date < next_page.date %}{{ next_page.date|date:"l j F" }}{% else %}Later{% endif %} &darr;</a></p>
+            <p class="next"><a href="{% querystring date=next_page.date time=next_page.time %}">{% if when.date < next_page.date %}{{ next_page.date|date:"l j F" }}{% else %}later{% endif %} &darr;</a></p>
         {% endif %}
         {% if when != now %}
-            <p><a href="{{ object.get_absolute_url }}">&uarr; Now</a></p>
+            <p><a href="{{ object.get_absolute_url }}">&uarr; now</a></p>
         {% endif %}
     {% endif %}
 </div>
