--- a/vehicles/templates/vehicles.html
+++ b/vehicles/templates/vehicles.html
@@ -20,7 +20,7 @@
 
 <p><a href="#">transportthing.uk</a> is a fleet listing site, we collect live tracking data from operators, that is enhanced with additional information provided by our wonderful users.</p>
 
-<p>There’s also <a href="https://csm.transportthing.uk/api/vehicles/">a vehicle information API</a>.</p>
+<p>There’s also <a href="https://transportthing.uk/api/vehicles/">a vehicle information API</a>.</p>
 
 <h2>Operators</h2>
 
