fix sat template padding

--- a/busstops/templates/satellites/starlink.html
+++ b/busstops/templates/satellites/starlink.html
@@ -4,6 +4,9 @@
 
 {% block head %}
     <meta property="og:title" content="Satellites &middledash; transportthing.uk">
+    <style>
+     main {padding: 0;}
+    </style>
 {% endblock head %}
 
 {% block bodyclass %}no-scroll{% endblock %}
