--- a/busstops/templates/503.html
+++ b/busstops/templates/503.html
@@ -1,6 +1,6 @@
 {% extends 'page.html' %}
 
-{% block title %}Error 503 – TransportThing{% endblock %}
+{% block title %}503 – TransportThing{% endblock %}
 
 {% block bodyclass %}narrow{% endblock %}
 
@@ -13,5 +13,6 @@
     <p><<REASON>></p>
 
     <p>Sorry. Please wait a moment and try again</p>
+    <img src="https://http.cat/503" alt="503 Service Unavailable" />
 
 {% endblock content %}
