--- a/busstops/templates/404.html
+++ b/busstops/templates/404.html
@@ -1,6 +1,6 @@
 {% extends 'page.html' %}
 
-{% block title %}Page not found – transportthing.uk{% endblock %}
+{% block title %}404 – transportthing.uk{% endblock %}
 
 {% block bodyclass %}narrow{% endblock %}
 
@@ -13,7 +13,7 @@
     {% if exception.args %}
         <p>{{ exception }}</p>
     {% else %}
-        <p>Sorry, this page doesn’t exist. Try searching?</p>
+        <img src="https://http.cat/404" alt="404 Not Found" />
     {% endif %}
 
     <form method="get" action="/search-query" class="search">
