add clearer credit to @jclgoodwin ?

--- a/busstops/templates/data.html
+++ b/busstops/templates/data.html
@@ -50,8 +50,11 @@
      <li>some of our livery icons were originally made by Oxon Buses - Check them out <a href="http://oxonbuses.co.uk">here</a>!</li>
 </ul>
 
-
-
+<p>Site Sources</p>
+<ul class="bulleted">
+    <li>TransportThing is open source and the code is available on <a href="https://github.com/transportthing/transportthing.uk">GitHub</a>.</li>
+    <li>The source code for our site was originally forked from <a href="https://github.com/jclgoodwin/bustimes.org">jclgoodwin/bustimes.org</a>.</li>
+</ul>
 <p>Information about vehicles (colours, registrations, fleet numbers, etc.) has been contributed by dozens of enthusiastic contributors, and is available from <a href="/api/">the API</a>.</p>
 
 <p>Postcode search is powered by <a href="https://postcodes.io/about">Postcodes.io</a>.</p>
