--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -16,7 +16,7 @@
 <script type="application/ld+json">{"@context":"http://schema.org","@type":"WebSite","url":"https://transportthing.uk","name":"TransportThing","potentialAction":{"@type":"SearchAction","target":"https://transportthing.uk/search-query?q={q}","query-input":"required name=q"}}</script>
 {% load static %}
 <!-- <link rel="icon" sizes="48x48" type="image/png" href="/favicon.ico"> -->
-<link rel="icon" sizes="any" type="image/svg+xml" href="https://cdn.discordapp.com/icons/1337054349267959898/bcb0fa2c5561cb082d1e8fb83f4e6566.webp?size=1024">
+<link rel="icon" sizes="any" type="image/svg+xml" href="https://cdn.transportthing.uk/TT%20Icon.png">
 <link rel="manifest" href="/static/manifest.webmanifest">
 <link rel="stylesheet" href="/static/dist/css/style.css">
 <meta name="description" content="check out our fleet lists of buses, trains, trams, satellites and more, all in one place!">
