--- a/busstops/templates/changes.html
+++ b/busstops/templates/changes.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <h1 style="margin-bottom: 4rem; padding-bottom: 1rem; border-bottom: 2px solid var(--brand-color-darker);">Recent Site Changes</h1>
-{% regroup notes by date as date_list %}
+{% regroup notes by datetime.date as date_list %}
 
 <style>
     .changes {
@@ -50,6 +50,13 @@
     .note-link {
         white-space: nowrap;
     }
+
+    /* Style for the time display */
+    .note-time {
+        font-weight: bold;
+        color: #666;
+        font-size: 0.9em;
+    }
 </style>
 
 <ul class="changes">
@@ -59,7 +66,7 @@
             <ul>
                 {% for note in date_group.list %}
                     <li>
-                        {{ note.note|linebreaksbr }}
+                        <span class="note-time">{{ note.datetime|time:"H:i" }}</span> - {{ note.note|linebreaksbr }}
                         {% if note.link_url and note.link_text %}
                             <span class="note-link">
                                 (<a href="{{ note.link_url }}">{{ note.link_text }}</a>)
