--- a/frontend/css/_base.scss
+++ b/frontend/css/_base.scss
@@ -61,7 +61,8 @@
 //css makes me want to perish
 // - ash
 
-.dark-mode{
+.dark-mode,
+html.dark-mode body{
     --brand-color: #006C7F;
     --brand-color-darker: #1D5560;
     --brand-color-darker-darker: #1D5560;
@@ -482,7 +483,8 @@ select {
     }
 }
 
-.dark-mode {
+.dark-mode,
+html.dark-mode body {
     select {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 16 8' width='16' height='8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon fill='%23eee' points='0,0 4,8 8,0'/%3E%3C/svg%3E");
     }
