--- a/frontend/js/maps.css
+++ b/frontend/js/maps.css
@@ -3,7 +3,8 @@
   --marker-arrow-color: #000;
 }
 
-.dark-mode {
+.dark-mode,
+html.dark-mode body {
   --marker-border-color: #000;
   --marker-arrow-color: #fff;
 }
@@ -199,15 +200,20 @@ body .maplibregl-popup-close-button {
 }
 
 body.dark-mode .maplibregl-ctrl-group,
+html.dark-mode body .maplibregl-ctrl-group,
 .dark-mode .map-button,
-.dark-mode .map-select-services {
+html.dark-mode .map-button,
+.dark-mode .map-select-services,
+html.dark-mode .map-select-services {
   background: var(--background-color);
   color: var(--text-color);
   box-shadow: 0 0 0 2px #fff5;
 }
 
 .dark-mode .map-style-switcher summary,
-.dark-mode .maplibregl-ctrl-icon {
+html.dark-mode .map-style-switcher summary,
+.dark-mode .maplibregl-ctrl-icon,
+html.dark-mode .maplibregl-ctrl-icon {
   filter: invert(100%);
 }
 
